Fix p-muted-heading alignment (#13482)
* Fix p-muted-heading alignment

* Account for both medium and small screens difference in padding

* Include highlighted_secondary_links in mobile view

* Let highlighted_secondary_links heading have top padding

* Add a tad more padding to use cases headings

* Lint lint lint

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -98,7 +98,7 @@ $meganav-height: 3rem;
           }
 
           .p-muted-heading {
-            padding-left: 0 !important;
+            padding-left: 0;
           }
         }
 
@@ -132,7 +132,7 @@ $meganav-height: 3rem;
           }
 
           .p-muted-heading {
-            padding-left: 0 !important;
+            padding-left: 0;
           }
         }
 
@@ -202,6 +202,18 @@ $meganav-height: 3rem;
         &::before {
           box-shadow: none;
         }
+
+        .p-muted-heading {
+          padding-left: 3rem;
+
+          @media (max-width: $breakpoint-medium) {
+            padding-left: 2.5rem;
+          }
+        }
+
+        .p-navigation__secondary-links .p-muted-heading {
+          padding-left: 0;
+        }
       }
 
       .p-navigation__link--search-toggle::after {
@@ -219,13 +231,11 @@ $meganav-height: 3rem;
       }
 
       .p-navigation__secondary-links {
-        @extend .dropdown-window__side-panel;
-
         margin-top: 1.5rem;
-        padding-left: calc(1.5rem + $row-margin-medium) !important;
+        padding-left: calc(1.5rem + $row-margin-medium);
 
         @media (max-width: $breakpoint-medium) {
-          padding-left: calc(1rem + $row-margin-small) !important;
+          padding-left: calc(1.5rem + $row-margin-small);
         }
 
         a {
